[gd_scene load_steps=2 format=3 uid="uid://bfw14idsdji"]

[ext_resource type="Script" path="res://scripts/CombatScripts/attack.gd" id="1"]

[node name="Attack_Phase" type="Node2D"]
script = ExtResource("1")

[node name="EnemyHand" type="Node2D" parent="."]
position = Vector2(233.5, 85.5)

[node name="EnemyPlayed" type="Node2D" parent="."]
position = Vector2(174, 77)

[node name="PlayerHand" type="Node2D" parent="."]
position = Vector2(32.5, 85.5)

[node name="PlayerPlayed" type="Node2D" parent="."]
position = Vector2(92, 79)
